Fix first heading margin on mobile

--- a/js/src/main/TopBar/TopBar.css
+++ b/js/src/main/TopBar/TopBar.css
@@ -44,6 +44,7 @@
     }
     #content-container h1:first-child {
         margin-top: 3.1rem;
+        margin-bottom: 0.5rem;
     }
 }
 
